desc line-height, fixed horizontal scroll on mobile

--- a/src/components/Product/product.scss
+++ b/src/components/Product/product.scss
@@ -116,7 +116,7 @@
     margin-bottom: 10px;
 
     p {
-        line-height: 20px;
+        line-height: 22px;
         letter-spacing: .5px;
         margin-bottom: 20px;
 
@@ -144,7 +144,7 @@
     .product-image {
         img {
             max-height: 400px;
-            max-width: 95vw;
+            max-width: 80vw;
         }
     }
 }
